test/Fail/TerminationNoArgs.agda
module TerminationNoArgs where

loop : Set
loop = loop
