test/Fail/TerminationNoArgs.err
TerminationNoArgs.agda:3.1-4.12: error: [TerminationIssue]
Termination checking failed for the following function:
  loop
Problematic call:
  loop
    (at TerminationNoArgs.agda:4.8-12)
